[package]
name = "scripting_rustabi"
version = "0.0.1"
edition = "2021"

[lib]
name = "scripting_rustabi"
crate-type = ["rlib"]

[dependencies]
libc = "0.2"
num_enum = "0.7"
argus_scripting_bind = { path = "../../libs/scripting_bind" }
core_rustabi = { path = "../core_rustabi" }
lowlevel_rustabi = { path = "../lowlevel_rustabi" }
