[package]
name = "argus_scripting_bind"
version = "0.0.1"
edition = "2021"

[lib]
name = "argus_scripting_bind"
crate-type = ["rlib"]

[dependencies]
argus_scripting_bind_macros = { path = "../scripting_bind_macros" }
argus_scripting_types = { path = "../scripting_types" }
linkme = "0.3.28"
serde_json = "1.0.131"
syn = { version = "2.0.77", features = ["full"] }
