[package]
name = "argus_scripting_bind"
version.workspace = true
edition.workspace = true

[lib]
name = "argus_scripting_bind"
crate-type = ["rlib"]

[dependencies]
argus_scripting_bind_macros = { path = "../scripting_bind_macros" }
argus_scripting_types = { path = "../scripting_types" }

linkme = { workspace = true }
syn = { workspace = true, features = ["full"] }
