[package]
name = "argus_scripting_bind_macros"
version = "0.0.1"
edition = "2021"

[lib]
name = "argus_scripting_bind_macros"
crate-type = ["proc-macro"]

[dependencies]
inventory = "0.3.15"
lazy_static = "1.5.0"
libc = "0.2"
proc-macro2 = "1.0.86"
quote = "1.0"
syn = { version = "2.0.77", features = ["full"] }
argus_scripting_bind_types = { path = "../scripting_bind_types" }

[build-dependencies]
inventory = "0.3.15"
