[package]
name = "argus_scripting_bind_macros"
version = "0.0.1"
edition = "2021"

[lib]
name = "argus_scripting_bind_macros"
crate-type = ["proc-macro"]

[dependencies]
inventory = "0.3.15"
proc-macro2 = "1.0.86"
quote = "1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
syn = { version = "2.0.77", features = ["full"] }
argus_scripting_types = { path = "../scripting_types" }

[build-dependencies]
inventory = "0.3.15"
