[package]
name = "argus_scripting_bind_macros"
version.workspace = true
edition.workspace = true

[lib]
name = "argus_scripting_bind_macros"
proc-macro = true

[dependencies]
argus_scripting_types = { path = "../scripting_types" }

proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
syn = { workspace = true, features = ["full"] }
