[package]
name = "argus_scripting_types"
version.workspace = true
edition.workspace = true

[lib]
name = "argus_scripting_types"
crate-type = ["rlib"]

[dependencies]
num_enum = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
