[package]
name = "argus_shadertools"
version.workspace = true

[lib]
name = "argus_shadertools"
crate-type = ["rlib"]

[dependencies]
glslang = { path = "../../../external-bindings/glslang" }

bitmask = { workspace = true }
glsl = { workspace = true }
libc = { workspace = true }

[features]
default = ["all"]
c_abi = []
all = ["c_abi"]
