[package]
name = "argus_game2d"
version.workspace = true
edition.workspace = true

[lib]
name = "argus_game2d"
crate-type = ["rlib"]

[dependencies]
argus_logging = { path = "../../libs/logging" }
argus_scripting_bind = { path = "../../libs/scripting_bind" }
argus_util = { path = "../../libs/argus_util" }

argus_core = { path = "../core" }
argus_input = { path = "../input" }
argus_render = { path = "../render" }
argus_resman = { path = "../resman" }
argus_wm = { path = "../wm" }

box2d_sys = { workspace = true }
fragile = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_valid = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
argus_build_util = { path = "../../libs/build_util" }
