[package]
name = "argus_render"
version.workspace = true
edition.workspace = true

[lib]
name = "argus_render"
crate-type = ["rlib"]

[dependencies]
argus_logging = { path = "../../libs/logging" }
argus_scripting_bind = { path = "../../libs/scripting_bind" }
argus_util = { path = "../../libs/argus_util" }

argus_core = { path = "../core" }
argus_resman = { path = "../resman" }
argus_wm = { path = "../wm" }

dashmap = { workspace = true }
lazy_static = { workspace = true }
lodepng = { workspace = true }
num_enum = { workspace = true }
parking_lot = { workspace = true }
rgb = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
arp = { workspace = true, default-features = false }
