[package]
name = "argus_render_opengl"
version.workspace = true
edition.workspace = true

[lib]
name = "argus_render_opengl"
crate-type = ["rlib"]

[dependencies]
argus_logging = { path = "../../libs/logging" }
argus_shadertools = { path = "../../libs/shadertools", default-features = false }
argus_util = { path = "../../libs/argus_util" }

argus_core = { path = "../core" }
argus_render = { path = "../render" }
argus_resman = { path = "../resman" }
argus_wm = { path = "../wm" }

glslang = "0.6.2"
num_enum = { workspace = true }
spirv-cross2 = { workspace = true, features = ["glsl"] }

[build-dependencies]
arp = { workspace = true }
